Tue Sep 24 09:59:05 GMT 2013  Olly Betts <olly@survex.com>

	* .gitignore,xapian-core.spec.in: Update two references to .tar.gz
	  files.

Tue Sep 24 09:54:42 GMT 2013  Olly Betts <olly@survex.com>

	* docs/install.rst: Fix typo (bogus extra 'and');

Tue Sep 24 09:54:01 GMT 2013  Olly Betts <olly@survex.com>

	* configure.ac,docs/install.rst: Compress source tarballs with xz
	  instead of gzip.

Mon Sep 23 12:58:23 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h,configure.ac,matcher/multimatch.cc: Implement
	  RealTime::sleep() using nanosleep() where it's available, since
	  it has a simpler API and a finer granularity than select().

Mon Sep 23 12:27:37 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h,net/remoteconnection.cc,net/tcpclient.cc: Add
	  RealTime::to_timeval() helper function to break a time interval
	  as a double into a struct timeval.  This uses modf() which gives
	  more compact and faster code than using fmod() as we previously
	  did.

Mon Sep 23 08:20:03 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h,configure.ac: Use clock_gettime() to implement
	  RealTime::now() where it's available.

Mon Sep 16 11:53:28 GMT 2013  Olly Betts <olly@survex.com>

	* api/,backends/brass/brass_postlist.cc,
	  backends/remote/net_postlist.cc,backends/slowvaluelist.cc,
	  expand/esetinternal.cc,include/xapian/unicode.h,
	  matcher/valuegepostlist.cc,matcher/valuerangepostlist.cc,
	  tests/api_query.cc,tests/queryparsertest.cc,unicode/: Fix all
	  get_description() methods to always return UTF-8 text.  (fixes #620)

Mon Sep 16 11:47:16 GMT 2013  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: Document how Utf8Iterator handles invalid
	  UTF-8.

Mon Sep 16 11:19:48 GMT 2013  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add test coverage for explicit synonym of
	  a term with a prefix (e.g. ~foo:search).

Fri Sep 06 07:11:29 GMT 2013  Olly Betts <olly@survex.com>
